--- a/accounts-qa.yml
+++ b/accounts-qa.yml
@@ -1,7 +1,7 @@
 build:
   version: "2.0"
 
-loans:
+accounts:
   message: "Welcome to HDFCBank loans related QA APIs "
   contactDetails:
     name: "Sachin Tendulkar - QA Lead"
