--- a/cards-prod.yml
+++ b/cards-prod.yml
@@ -1,8 +1,8 @@
 build:
   version: "3.0"
 
-loans:
-  message: "Welcome to HDFCBank cards related prod APIs "
+cards:
+  message: "Welcome to HDFCBank Cards related prod APIs "
   contactDetails:
     name: "Rahul Dravid - Product Owner"
     email: "rahul@hdfcbank.com"
