--- a/cards-qa.yml
+++ b/cards-qa.yml
@@ -1,7 +1,7 @@
 build:
   version: "2.0"
 
-loans:
+cards:
   message: "Welcome to HDFCBank cards related QA APIs "
   contactDetails:
     name: "Sachin Tendulkar - QA Lead"
